Remove compatibility projections; refactor transport
Remove legacy compatibility task-message projection types and APIs and modernize transport/result handling.

Key changes:
- Deleted engine compatibility view types: TaskMessageView, TaskMessageSnapshotView, TaskMessageAttemptView and removed corresponding deprecated methods from TaskManager, TaskQueryPort, TaskQueryService and MassSdkApplication.
- Updated tests and call sites to use TaskMsg and TaskMsgAttempt domain objects and updated assertions accordingly; added a reflective helper in tests to invoke TaskManager projections where needed.
- Refactored BufferedTaskResultIngestChannel to use a raw object queue, batch draining (MAX_DRAIN_BATCH), TimeUnit import, processBatch to improve throughput and preserve type-specific handling; added a unit test for mixed report/envelope draining.
- Transport routing: added TransportRuntimeRegistry.resolveDispatchBinding(Worker) and updated TransportRoutingTaskMsgDispatchListener to resolve and cache ResolvedDispatchTarget per worker within a dispatch batch to avoid repeated lookups; added tests and counting helper to verify reuse.
- Delivery API: return unmodifiable lists from QueueBackedTransportDeliveryStore and TransportDeliveryService to avoid accidental mutation.
- Misc: small imports and collection usage adjustments, plus removal of SDK compatibility adapters and types.

Rationale: remove legacy/compatibility projection surface to reduce API/maintenance burden and migrate code/tests to use canonical TaskMsg/TaskMsgAttempt models; improve transport/result ingest performance and stability by batching and caching lookups.